(include_subdirs unqualified)

(library
 (name AFTN)
 (public_name AFTN)
 (libraries unix threads ocplib-endian)
 (modules
  character
  encounter
  events
  game_loop
  game_state
  item
  logging
  map
  objective
  selection
  utils
  ripley
  dallas
  lambert
  parker
  brett
  common
  client
  server))
